--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -57,13 +57,13 @@
                         <form id="formLogin" method="POST" action="{{ url_for('login') }}">
                             <div class="mb-3">
                                 <label for="username" class="form-label">Username</label>
-                                <input type="text" class="form-control form-control-sm" id="username" name="username" autocomplete="off"
-                                    placeholder="username" maxlength="12" required
+                                <input type="text" class="form-control form-control-sm{{ ' is-invalid' if 'username' in validate }}" id="username" name="username" autocomplete="off"
+                                    placeholder="username" maxlength="12" required 
                                     onkeydown="return this.value=this.value.toLowerCase()">
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" class="form-control form-control-sm" id="password" name="password"
+                                <input type="password" class="form-control form-control-sm{{ ' is-invalid' if 'password' in validate }}" id="password" name="password"
                                     placeholder="password" maxlength="20" required>
                             </div>
                             <div class="text-end">
