--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -12,12 +12,16 @@
     <style>   
         :root {
             --main: #1E518E;
-        }   
+        } 
 
         body {
             background: #F7F7F7;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;            
-        }        
+        }  
+        
+        .active:hover {
+            opacity: 90%;
+        }
     </style>
 </head>
 
@@ -30,7 +34,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -42,14 +46,12 @@
                         <a class="nav-link" href="#">Report</a>
                     </li>
                 </ul>
-            </div>
-            <div>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                        <a class="nav-link active" href="{{ url_for('logout') }}">Logout</a>
                     </li>
                 </ul>
-            </div>            
+            </div>                     
         </div>
     </nav>    
 
