Change copyright text

--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -83,8 +83,10 @@
 
     <footer class="fixed-bottom text-end p-2" style="background: #FFFFFF;">        
         <sup class="text-secondary">
-            &#169; 
-            {{ COPYRIGHT }} {{ APP_NAME }} {{ VERSION }}
+            Copyright &#169; 
+            {{ COPYRIGHT }} 
+            <b style="color: var(--main);">{{ APP_NAME }}</b> 
+            {{ VERSION }}
         </sup>                                  
     </footer>
 
