--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -61,9 +61,11 @@
 
     <footer class="fixed-bottom text-end p-2" style="background: #FFFFFF;">        
         <sup class="text-secondary">
-            &#169; 
-            {{ COPYRIGHT }} {{ APP_NAME }} {{ VERSION }}
-        </sup>                                  
+            Copyright &#169; 
+            {{ COPYRIGHT }} 
+            <b style="color: var(--main);">{{ APP_NAME }}</b> 
+            {{ VERSION }}
+        </sup>                                
     </footer>
 
     <!-- Bootstrap 5 JS -->        
