Add filter categories flash message

--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -47,15 +47,13 @@
 
                     <div class="card-body">                            
                         <!-- Flash message -->
-                        {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% with messages = get_flashed_messages(with_categories=true, category_filter=["danger", "success", "info", "warning"]) %}
                         {% if messages %}
                         <label class="text-center w-100">
-                            {% for category, message in messages %}
-                            {% if category != "error" %}
+                            {% for category, message in messages %}                            
                             <div class="alert alert-{{ category }} p-1" role="alert">
                                 {{message}}
-                            </div>
-                            {% endif %}
+                            </div>                            
                             {% endfor %}
                         </label>
                         {% endif %}
@@ -121,16 +119,14 @@
         };
     </script>
 
-    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% with messages = get_flashed_messages(with_categories=true, category_filter=["error"]) %}
     {% if messages %}    
-        {% for category, message in messages %}
-        {% if category == "error" %}
+        {% for category, message in messages %}        
         <script type="text/javascript">
             let category    = '{{ category }}';
             let message     = '{{ message|trim|safe }}';
             alertMessage(category, message);
-        </script>
-        {% endif %}
+        </script>        
         {% endfor %}    
     {% endif %}
     {% endwith %}    
