Add 405 error handle and bold validate message form

--- a/flask_template/templates/errors/405.html
+++ b/flask_template/templates/errors/405.html
@@ -3,9 +3,9 @@
     <div class="col-sm-12">        
         <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
             <div class="text-center">
-                <i class="fa fa-hand-stop-o text-danger" style="font-size: 64px;"></i>
-                <h1 class="text-danger">403 Forbidden</h1>                
-                <h3>Sorry, you do not have access to this page.</h3>
+                <i class="fa fa-ban text-danger" style="font-size: 64px;"></i>
+                <h1 class="text-danger">405 Method Not Allowed</h1>                
+                <h3>Sorry, the requested method is not allowed.</h3>
             </div>
         </div>        
     </div>
