Change Jinja2 flash alert message so it show without double quotes

--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -123,8 +123,8 @@
     {% if messages %}    
         {% for category, message in messages %}        
         <script type="text/javascript">
-            let category    = '{{ category }}';
-            let message     = '{{ message|trim|safe }}';
+            let category    = {{ category|trim|tojson|safe }};
+            let message     = {{ message|trim|tojson|safe }};
             alertMessage(category, message);
         </script>        
         {% endfor %}    
