--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -63,8 +63,7 @@
                             <div class="mb-3">
                                 <label for="username" class="form-label">Username</label>
                                 <input type="text" class="form-control form-control-sm{{ ' is-invalid' if 'username' in validate }}" id="username" name="username" value="{{ username }}" autocomplete="off"
-                                    placeholder="username" maxlength="12" required 
-                                    onkeydown="return this.value=this.value.toLowerCase()">
+                                    placeholder="username" maxlength="12" onkeypress="validateInput(event, 'lower')" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Password</label>
@@ -117,6 +116,29 @@
                 position            : "top"
             });
         };
+
+        function validateInput(event, format_text) {            
+            // Get the pressed key
+            var key = event.key;
+
+            // Use a regular expression to check if the key is a letter or a number
+            var regex = /^[a-zA-Z0-9]$/;
+
+            if (!regex.test(key)) {
+                // If the key is not valid, prevent its input
+                event.preventDefault();                
+            } else {
+                // If pressed key is valid
+                if (format_text == "lower") {
+                    event.target.value += key.toLowerCase();
+                } else if (format_text == "upper") {
+                    event.target.value += key.toUpperCase();
+                } else {
+                    event.target.value += key;
+                }
+                event.preventDefault();
+            }
+        }
     </script>
 
     {% with messages = get_flashed_messages(with_categories=true, category_filter=["error"]) %}
