--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -100,24 +100,33 @@
 
         function validateAlnum(event, format_text) {            
             // Get the pressed key
-            var key = event.key;
+            let key = event.key;
 
             // Use a regular expression to check if the key is a letter or a number
-            var regex = /^[a-zA-Z0-9]$/;
+            let regex = /^[a-zA-Z0-9]$/;
 
             if (!regex.test(key)) {
                 // If the key is not valid, prevent its input
                 event.preventDefault();                
             } else {
                 // If pressed key is valid
-                if (format_text == "lower") {
-                    event.target.value += key.toLowerCase();
-                } else if (format_text == "upper") {
-                    event.target.value += key.toUpperCase();
+                let input   = event.target;
+                let maxLength = parseInt(input.getAttribute('maxlength'), 10);                
+                let currentLength = input.value.length;                
+
+                if (currentLength >= maxLength) {
+                    // If at maximum length, prevent further input
+                    event.preventDefault();
                 } else {
-                    event.target.value += key;
+                    if (format_text == "lower") {
+                        event.target.value += key.toLowerCase();
+                    } else if (format_text == "upper") {
+                        event.target.value += key.toUpperCase();
+                    } else {
+                        event.target.value += key;
+                    }
+                    event.preventDefault();
                 }
-                event.preventDefault();
             }
         };
     </script>
