--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -5,146 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ APP_NAME }}{{ " - " ~ menu if menu else "" }}</title>
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='assets/favicon-32x32.png') }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='assets/favicon-16x16.png') }}">    
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">
-    <!-- Bootstrap 5 CSS -->    
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">    
-    <!-- Sweet Alert 2 CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='sweetalert2/sweetalert2.min.css') }}"> 
-
-    <style>   
-        :root {
-            --main: #1E518E;
-        } 
-
-        body {
-            background: #F7F7F7;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;            
-        }  
-        
-        .active:hover {
-            opacity: 90%;
-        }
-    </style>
+    {% include "lib_css.html" %}
+    
+    {% block style %}    
+    {% endblock style %}
 </head>
 
 
-<body>    
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background: var(--main);">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">{{ APP_NAME }}</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Transaction</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Report</a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{{ url_for('logout') }}">Logout</a>
-                    </li>
-                </ul>
-            </div>                     
-        </div>
-    </nav>    
+<body class="hold-transition sidebar-mini layout-fixed">    
+    {% if current_user.is_authenticated %}
+        {% include "sidebar.html"  %}
+    {% endif %}
+         
+    {% block content %}{% endblock content %}
 
-    <div class="container">        
-        {% block content %}{% endblock content %}
-    </div>
-
-    <footer class="fixed-bottom text-end p-2" style="background: #FFFFFF;">        
-        <sup class="text-secondary">
-            Copyright &#169; 
-            {{ COPYRIGHT }} 
-            <b style="color: var(--main);">{{ APP_NAME }}</b> 
-            {{ VERSION }}
-        </sup>                                
-    </footer>
-
-    <!-- Bootstrap 5 JS -->        
-    <script src="{{ url_for('static', filename='bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js') }}"></script>        
-    <!-- Jquery 3.6.4 -->        
-    <script src="{{ url_for('static', filename='jquery-3.6.4/jquery-3.6.4.min.js') }}"></script>  
-    <!-- Jquery Validate -->
-    <script src="{{ url_for('static', filename='jquery-3.6.4/jquery.validate.min.js') }}"></script>
-    <!-- Font Awesome 6 -->        
-    <script src="{{ url_for('static', filename='font-awesome-6/font-awesome-6.js') }}"></script>        
-    <!-- Sweet Alert 2 -->
-    <script src="{{ url_for('static', filename='sweetalert2/sweetalert2.min.js') }}"></script>              
-
-    <script type="text/javascript">
-        function alertMessage(category, message) {            
-            Swal.fire({
-                icon                : category == "danger" ? "error" : category, // Change category flash danger into error for icon
-                title               : category == "error" ? "Oops, something went wrong" : "Notification",                
-                html                : `<p class="alert alert-${category == "error" ? "danger" : category} p-2">${message}</p>`, // Change category error into danger for alert class
-                showConfirmButton   : false,
-                showCancelButton    : true,
-                cancelButtonText    : "Close",
-                allowOutsideClick   : false,
-                position            : "top"
-            });
-        };
-
-        function validateAlnum(event, format_text) {            
-            // Get the pressed key
-            let key = event.key;
-
-            // Use a regular expression to check if the key is a letter or a number
-            let regex = /^[a-zA-Z0-9]$/;
-
-            if (!regex.test(key)) {
-                // If the key is not valid, prevent its input
-                event.preventDefault();                
-            } else {
-                // If pressed key is valid
-                let input   = event.target;
-                let maxLength = parseInt(input.getAttribute('maxlength'), 10);                
-                let currentLength = input.value.length;                
-
-                if (currentLength >= maxLength) {
-                    // If at maximum length, prevent further input
-                    event.preventDefault();
-                } else {
-                    if (format_text == "lower") {
-                        event.target.value += key.toLowerCase();
-                    } else if (format_text == "upper") {
-                        event.target.value += key.toUpperCase();
-                    } else {
-                        event.target.value += key;
-                    }
-                    event.preventDefault();
-                }
-            }
-        };
-    </script>
+    {% include "lib_js.html" %}                 
 
     {% block script %}
-    {% endblock script %}
-
-    {% with messages = get_flashed_messages(with_categories=true) %}
-    {% if messages %}    
-        {% for category, message in messages %}        
-        <script type="text/javascript">
-            let category    = {{ category|trim|tojson|safe }};
-            let message     = {{ message|trim|tojson|safe }};
-            alertMessage(category, message);
-        </script>        
-        {% endfor %}    
-    {% endif %}
-    {% endwith %}
+    {% endblock script %}    
 </body>
 
 </html>
