--- a/flask_template/templates/errors/404.html
+++ b/flask_template/templates/errors/404.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %} {% block content %}    
+{% extends "layout.html" %} 
+{% block content %}    
 <div class="row">
     <div class="col-sm-12">        
         <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
@@ -11,3 +12,17 @@
     </div>
 </div>
 {% endblock content %}
+
+{% block noauth_content %}    
+<div class="row">
+    <div class="col-sm-12">        
+        <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
+            <div class="text-center">
+                <i class="fas fa-exclamation-triangle text-danger" style="font-size: 64px;"></i>
+                <h1 class="text-danger">404 Page Not Found</h1>                
+                <h3>Sorry, the page you were looking for doesn't exists.</h3>
+            </div>
+        </div>        
+    </div>
+</div>
+{% endblock noauth_content %}
