--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -5,7 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ APP_NAME }}{{ " - " ~ menu if menu else "" }}</title>
 
-    {% include "lib_css.html" %}
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='assets/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='assets/favicon-16x16.png') }}">    
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">      
+    <!-- AdminLTE 3.2 -->    
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin-lte/dist/css/adminlte.min.css') }}">        
+    <!-- Daterange picker -->    
+    <link rel="stylesheet" href="{{ url_for('static', filename='daterangepicker/daterangepicker.css') }}">        
+    <!-- Sweet Alert2 -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='sweetalert2/dist/sweetalert2.min.css') }}"> 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='@fortawesome/fontawesome-free/css/all.min.css') }}">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     
     {% block style %}    
     {% endblock style %}
@@ -80,7 +93,37 @@
         {% block noauth_content %} {% endblock noauth_content %}
     {% endif %}
 
-    {% include "lib_js.html" %}                 
+    <!-- Jquery -->        
+    <script src="{{ url_for('static', filename='jquery/dist/jquery.min.js') }}"></script>  
+    <!-- Popper -->
+    <script src="{{ url_for('static', filename='popper.js/dist/umd/popper.min.js') }}"></script>      
+    <!-- Bootstrap -->
+    <script src="{{ url_for('static', filename='bootstrap/dist/js/bootstrap.min.js') }}"></script>     
+    <!-- AdminLTE 3.2 -->
+    <script src="{{ url_for('static', filename='admin-lte/dist/js/adminlte.min.js') }}"></script>    
+    <!-- Moment -->        
+    <script src="{{ url_for('static', filename='moment/moment.js') }}"></script>
+    <!-- Daterange picker -->        
+    <script src="{{ url_for('static', filename='daterangepicker/daterangepicker.js') }}"></script>
+    <!-- Jquery Validate -->
+    <script src="{{ url_for('static', filename='jquery-validation/dist/jquery.validate.min.js') }}"></script>            
+    <!-- Sweet Alert2 -->
+    <script src="{{ url_for('static', filename='sweetalert2/dist/sweetalert2.min.js') }}"></script>
+    <!-- Custom JS -->
+    <script src="{{ url_for('static', filename='script.js') }}"></script>
+
+    <!-- Display popup message from flash -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}    
+        {% for category, message in messages %}        
+        <script type="text/javascript">
+            let category    = {{ category|trim|tojson|safe }};
+            let message     = {{ message|trim|tojson|safe }};
+            alertMessage(category, message);
+        </script>        
+        {% endfor %}    
+    {% endif %}
+    {% endwith %}               
 
     {% block script %}
     {% endblock script %}    
