--- a/flask_template/templates/layout.html
+++ b/flask_template/templates/layout.html
@@ -90,7 +90,7 @@
             </footer>
         </div>           
     {% else %}   
-        {% block noauth_content %} {% endblock noauth_content %}
+        {% block unauth_content %} {% endblock unauth_content %}
     {% endif %}
 
     <!-- Jquery -->        
