--- a/flask_template/templates/login.html
+++ b/flask_template/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block noauth_content %}
+{% block unauth_content %}
 <div class="container">
     <div class="row justify-content-center" style="height: 90vh;">
         <div class="col-sm-12 col-md-12 col-lg-6 my-auto">
@@ -35,4 +35,4 @@
         </div>
     </div>
 </div>
-{% endblock noauth_content %}
+{% endblock unauth_content %}
