--- a/flask_template/templates/errors/404.html
+++ b/flask_template/templates/errors/404.html
@@ -13,7 +13,7 @@
 </div>
 {% endblock content %}
 
-{% block noauth_content %}    
+{% block unauth_content %}    
 <div class="row">
     <div class="col-sm-12">        
         <div class="d-flex align-items-center justify-content-center" style="height: 80vh;">
@@ -25,4 +25,4 @@
         </div>        
     </div>
 </div>
-{% endblock noauth_content %}
+{% endblock unauth_content %}
